--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -1,7 +1,7 @@
 div{
     color:white;
     background-color: red;
-    align-items: center;
+    text-align: center;
     font-size: 32px;
     font-weight: bold;
 }
